2012-02-13  Peter Grandi  <pg_mh@mh.to.sabi.co.UK>

	[ftview] Implement cycling backwards for rendering and LCD modes.

	* src/ftview.c (Process_Event): Handle keys `K' and `backspace'.
	(event_help): Updated.

2012-02-13  Werner Lemberg  <wl@gnu.org>

	Fix X11 keyboard handling.

	* graph/grevents.h (grKey): Shift special keys to a higher range,
	otherwise it can happen that they are processed twice.  For example,
	`grKeyBackSpace' also returns key code 8 under X11, and this was
	previously mapped to `grKeyF8'.

2011-12-07  Antoine Leca  <Antoine-Freetype@Leca-Marti.org>

	Fix printf specifications and parameters.

	* src/ttdebug.c (Cur_U_Line, RunIns): Use "%hu" for FT_UShort,
	"&ld" for FT_Pos; drop the "h" in "%hx" for FT_Byte parameters
	and cast the parameters to (unsigned) ("%hhx" is C99 only, and
	often unimplemented). Noticed by clang.

2011-12-02  suzuki toshiya  <mpsuzuki@hiroshima-u.ac.jp>

	Use $(LIBTOOL) to make graph.a, if it is defined.

	If configure script in FreeType2 library directory creates GNU
	Libtool, using it is better than using raw `ar'.  For example,
	Mac OS X archive library is required to be processed by ranlib.
	See discussion in
	http://lists.gnu.org/archive/html/freetype-devel/2011-10/msg00034.html

	* graph/rules.mk: Change the object suffix $(SO) to $(O) for
	the sake of GNU Libtool.  If $(LIBTOOL) is defined, use it to
	compile the objects and make the library.
	* graph/x11/rules.mk: Ditto.
	* graph/beos/rules.mk: Ditto.

	* Makefile: `clean' target erases the object, the library and
	GNU Libtool related files in .libs/ directory.

2011-11-15  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.8 released.
	=========================


	Tag sources with `VER-2-4-8'.

	* README: Updated.

2011-10-18  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.7 released.
	=========================


	Tag sources with `VER-2-4-7'.

	* README: Updated.

2011-08-14  Werner Lemberg  <wl@gnu.org>

	Improve usage messages.
